# sss_ml_lf

./: Cargo.toml
src/: lib.rs  plot.rs
src/loss_function/: binary_cross_entropy_loss.rs  mean_absolute_error.rs  mean_bias_error.rs  mean_square_error.rs  mod.rs  multi_class_svm_loss.rs  one_zero_loss.rs  square_error_loss.rs  two_parameter_loss.rs
src/loss_function/multi_class/: exponential_loss.rs  generalized_smooth_hinge_loss.rs  hinge_loss.rs  logistic_loss.rs  mod.rs  savage_loss.rs  square_loss.rs  tangent_loss.rs
