[package]
name = "sss_ml_lf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]

[dev-dependencies]
plotters = "*"
linspace = "*"

[dependencies]
moddef = "0.2.2"
rand = "0.8.5"
rand_distr = "0.4.3"
array_math = "0.1.3"
polynomial_ops = "0.1.4"
num_identities_const = "0.1.0"
libm = "0.2.7"
statrs = "0.16.0"
#rayon = "1.6.1"
#clone_box = { path = "../clone_box" }
#const_fn_assert = "0.1.2"
#ethnum = "1.3.2"
#serde = "1.0.152"
#serde_json = "1.0.93"
#typetag = "0.2.5"
num = "0.4.1"